--- a/GoogleDataCollection/packages.config
+++ b/GoogleDataCollection/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="GoogleMapsApi" version="0.65.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net462" />
+  <package id="ShellProgressBar" version="3.0.0.0" targetFramework="net462" />
 </packages>
