- Added JSON CSV parsing error data. - Inverted X, Y column indices for correct parsing. - Updated to work on LOUPCEUXL1.

--- a/GoogleDataCollection/GoogleDataCollection.csproj
+++ b/GoogleDataCollection/GoogleDataCollection.csproj
@@ -59,11 +59,10 @@
     <Compile Include="DataAccess\GoogleAccess.cs" />
     <Compile Include="DataAccess\JsonAccess.cs" />
     <Compile Include="DataAccess\SpreadsheetAccess.cs" />
-    <Compile Include="Model\ErrorContainer.cs" />
-    <Compile Include="Model\ErrorReport.cs" />
+    <Compile Include="Model\CsvParsing.cs" />
     <Compile Include="Model\PointToPoint.cs" />
     <Compile Include="Model\PointToPointContainer.cs" />
-    <Compile Include="Model\PointToPointError.cs" />
+    <Compile Include="Model\CsvParsingError.cs" />
     <Compile Include="Model\Project.cs" />
     <Compile Include="Model\Period.cs" />
     <Compile Include="Program.cs" />
