- Completed asynchronous infrastructure. - Included Logging from AutoProgramCM.

--- a/GoogleDataCollection/GoogleDataCollection.csproj
+++ b/GoogleDataCollection/GoogleDataCollection.csproj
@@ -59,6 +59,9 @@
     <Compile Include="DataAccess\GoogleAccess.cs" />
     <Compile Include="DataAccess\JsonAccess.cs" />
     <Compile Include="DataAccess\SpreadsheetAccess.cs" />
+    <Compile Include="Logging\ILog.cs" />
+    <Compile Include="Logging\Log.cs" />
+    <Compile Include="Logging\LogMessage.cs" />
     <Compile Include="Model\CsvParsing.cs" />
     <Compile Include="Model\Edge.cs" />
     <Compile Include="Model\DataContainer.cs" />
