- Batch, Project & Execution summaries logged. - Validation and write to object complete.

--- a/GoogleDataCollection/GoogleDataCollection.csproj
+++ b/GoogleDataCollection/GoogleDataCollection.csproj
@@ -59,7 +59,7 @@
     <Compile Include="Logging\Log.cs" />
     <Compile Include="Logging\LogCategory.cs" />
     <Compile Include="Logging\LogMessage.cs" />
-    <Compile Include="Model\BatchSummary.cs" />
+    <Compile Include="Model\Summary.cs" />
     <Compile Include="Model\CsvParsing.cs" />
     <Compile Include="Model\Edge.cs" />
     <Compile Include="Model\DataContainer.cs" />
