- Added functionality to generate a report grouping edges by hour and their latest update. - Bug fix: console quick edit.

--- a/GoogleDataCollection/GoogleDataCollection.csproj
+++ b/GoogleDataCollection/GoogleDataCollection.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helper\ConsoleQuickEdit.cs" />
     <Compile Include="DataAccess\CsvAccess.cs" />
     <Compile Include="DataAccess\GoogleAccess.cs" />
     <Compile Include="DataAccess\JsonAccess.cs" />
